docs(openspec): source Linux attach candidates from the windowing system
The change assumed automatic attachment would come along for free on
Linux. It would not have: JavaProvider offers the agent to the JVMs behind
the Java windows a pass saw, and that candidate list is filled ONLY by
backends that enumerate windows — which means JAB, on Windows. Gating JAB
out (task 2.1) removes the list entirely, so auto_attach would stay on by
default and never be able to fire, and only JVMs launched with -javaagent
would ever be served. That is java-provider's existing "Automatic
attachment to detected JVMs, on by default" requirement inherited unmet
on the platform this change adds.

So Linux gets a candidate source: the router keeps the WindowManager it
already receives, and fills the list from native top-level enumeration
with each window's owner resolved by the rule dev-docs/java-toolkits.md
already settles — X-Resource XResQueryClientIds, which the X server
derives from socket credentials, with EWMH _NET_WM_PID only as a
corroborated fallback. Attaching into a process a window merely claims is
not a cosmetic error.

Two consequences worth stating rather than discovering later. The
WindowManager trait change is no longer contingent on a measurement, so
this change definitely touches platynui_core; design 1 narrows to whether
the agent's in-process X11 id is used IN ADDITION, for identity. And the
condition for using the window-derived source is which backends exist —
declared statically on the trait — not whether a pass produced candidates:
the latter is also true on Windows whenever JAB sees no Java window, which
would switch Windows onto the new source behind a Non-Goal, invisibly,
since it is masked today only by platform-windows not implementing the
enumeration.

Also records what java-agent-web-start means here: with no JAB fallback on
Linux, an application the agent cannot see is an application that is not
there at all, so the AppContext fix matters more on this plat